--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
 Perseverance Mutengera<perseverancemu@gmail.com>
+Innocent Christian Mhango<111076892+i-christian@users.noreply.github.com>
+
